# noteclaw

./: README-en.md  README.md  _config.yml  api_server.py  index.md  launcher.py  noteclaw.py  pyproject.toml
cli/: main.py
core/: __init__.py  ai.py  core.py  wiki.py
web/: index.html
